# proccesslogger

./: Cargo.toml  config.ron  config.toml  emptylog.ron  ignorefile.ron  install.sh  proccesslogger.service  test.rs
etc/: proccesslogger.service  processlogger.service
old/: .gitignore
old/src/: main.rs  main2.rs
old2/old/: config.toml
old2/old/src/: main.rs  time.rs
old2/src/: main.rs
pl-daemon/: Cargo.toml  struct.ron
pl-daemon/src/: config.rs  main.rs  main3.rs
pl-shared/: Cargo.toml
pl-shared/src/: lib.rs
pl-web/: Cargo.toml  a
pl-web/src/: logformat.rs  main.rs
src/: clone4sys.rs  config.rs  diff.rs  main.rs
