[package]
name = "proccesslogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.6"
chrono = "0.4.23"
regex = "1"
toml = "0.5.10"
serde = { version = "1", features = ["derive"] }
xdg = "2.4.1"