[package]
name = "pl-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.4.1"
ron = "0.8"
chrono = "0.4.23"
sysinfo = "0.27.6"
serde = { version = "1", features = ["derive"] }
salmon = { git = "https://github.com/TH3-S4LM0N/lib-salmon", features = ["fs"] }
pl-shared = { path = "../pl-shared" }