[package]
name = "pl-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.4.1"
#salmon = { git = "https://github.com/TH3-S4LM0N/lib-salmon", features = ["diff"] }
salmon = { path = "../../lib-salmon", features = ["diff"] }